# smart_KG

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: field_mapping_config.json  id_policy.json  ontology_schema.json  relation_mapping_config.json  rule_condition_schema.json  rules.json  spatial_relation_schema.json  value_normalization_config.json
data/raw/: sample_geo_features.csv  sample_line_segments.csv  sample_tower_sites.csv
data/spatial_relations/: sample_spatial_relations.json
data/standardized/: base_cost_rules_from_excel.json  cost_rules_20260422.json  rules_from_excel.json
docs/: reference_notes.md
scripts/: import_neo4j.ps1  run_demo.ps1  run_tests.ps1  serve_api.ps1  standardize_excel.ps1
src/smart_kg/: __init__.py  api.py  cli.py  condition_evaluator.py  cost_rule_loader.py  data_loader.py  excel_loader.py  gpkg_standardizer.py  graph_rule_source.py  logging_utils.py  neo4j_writer.py  paths.py  raster_executor.py  rule_engine.py  schemas.py
tests/: test_condition_evaluator.py  test_gpkg_standardizer.py  test_graph_rule_source.py  test_raster_executor.py  test_route_decision_graph.py  test_rule_engine.py  test_rule_set_catalog.py
